--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,71 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
+# Coursera Reproducible Research Week 2 Project 1
+
+## Code for reading in the dataset and/or processing the data
+```{r, echo=TRUE}
+stepsdata <- read.csv("C:\\Users\\sanjiv\\Desktop\\activity.csv", header = TRUE, sep = ",")
+head(stepsdata)
+```
+
+## Histogram of the total number of steps taken each day
+
+```{r}
+library("dplyr")
+newdata <- stepsdata %>% select(date, steps) %>% group_by(date) %>% summarize(tsteps = sum(steps)) %>% na.omit()
+hist(newdata$tsteps, xlab = "Total steps per day", main = "daily total steps", breaks = 53)
+```
+
+## Mean and median number of steps taken each day
+
+```{r}
+mean(newdata$tsteps)
+median(newdata$tsteps)
+```
+
+## Time series plot of the average number of steps taken
+
+```{r}
+library(ggplot2)
+data_interval <- stepsdata %>% select(interval, steps) %>%na.omit() %>% group_by(interval) %>% summarize(tsteps = mean(steps))
+ggplot(data_interval, aes(interval, tsteps)) + geom_line()
+```
+
+## The 5-minute interval that, on average, contains the maximum number of steps
+
+```{r}
+data_interval[which(data_interval$tsteps== max(data_interval$tsteps)),]
+```
+
+## Code to describe and show a strategy for imputing missing data
+
+```{r}
+missingval <- sum(is.na(stepsdata))
+missingval
+replacewithmean <- function(x) replace(x, is.na(x), mean(x, na.rm = TRUE))
+meandata <- stepsdata%>% group_by(interval) %>% mutate(steps= replacewithmean(steps))
+head(meandata)
+```
+
+## Histogram of the total number of steps taken each day after missing values are imputed
+
+```{r}
+newdatabydate <- meandata %>% select(date, steps) %>% group_by(date) %>% summarize(totalsteps = sum(steps))
+hist(newdatabydate$totalsteps, xlab = "total steps", ylab = "frequency", main = "Total daily steps", breaks = 61)
+```
+
+## Panel plot comparing the average number of steps taken per 5-minute interval across weekdays and weekends
+
+```{r}
+meandata$date <- as.Date(meandata$date)
+meandata$weekday <- weekdays(meandata$date)
+meandata$weekend <- ifelse(meandata$weekday=="Saturday" | meandata$weekday=="Sunday", "Weekend", "Weekday" )
+meandataweekendweekday <- aggregate(meandata$steps , by= list(meandata$weekend, meandata$interval), na.omit(mean))
+names(meandataweekendweekday) <- c("weekend", "interval", "steps")
+ 
+ggplot(meandataweekendweekday, aes(x=interval, y=steps, color=weekend)) + geom_line()+
+     facet_grid(weekend ~.) + xlab("Interval") + ylab("Mean of Steps") +
+     ggtitle("Comparison of Average Number of Steps in Each Interval")
+```
+
+##Fin. 
 
 
-## Loading and preprocessing the data
-
-
-
-## What is mean total number of steps taken per day?
-
-
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
